frontend/frontend.log
yarn run v1.22.22
$ craco start
Browserslist: browsers data (caniuse-lite) is 7 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme
(node:815) [DEP_WEBPACK_DEV_SERVER_ON_AFTER_SETUP_MIDDLEWARE] DeprecationWarning: 'onAfterSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:815) [DEP_WEBPACK_DEV_SERVER_ON_BEFORE_SETUP_MIDDLEWARE] DeprecationWarning: 'onBeforeSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
Starting the development server...

[0;33mOne of your dependencies, babel-preset-react-app, is importing the
"@babel/plugin-proposal-private-property-in-object" package without
declaring it in its dependencies. This is currently working because
"@babel/plugin-proposal-private-property-in-object" is already in your
node_modules folder for unrelated reasons, but it [1mmay break at any time[0;33m.

babel-preset-react-app is part of the create-react-app project, [1mwhich
is not maintianed anymore[0;33m. It is thus unlikely that this bug will
ever be fixed. Add "@babel/plugin-proposal-private-property-in-object" to
your devDependencies to work around this error. This will make this message
go away.[0m
  
Compiled successfully!

You can now view frontend in the browser.

  Local:            http://localhost:3000
  On Your Network:  http://10.64.158.75:3000

Note that the development build is not optimized.
To create a production build, use yarn build.

webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Failed to compile.

[eslint] 
src/App.js
Syntax error: Unterminated JSX contents. (145:10) (145:10)
ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /app/viet-portphotio/frontend/src/App.js: Unterminated JSX contents. (145:10)

  143 |         </BrowserRouter>
  144 |       </AuthProvider>
> 145 |     </div>
      |           ^
  146 |   );
  147 | }
  148 |
    at constructor (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:359:19)
    at FlowParserMixin.raise (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:3266:19)
    at FlowParserMixin.jsxReadToken (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6502:20)
    at FlowParserMixin.getTokenFromCode (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6828:12)
    at FlowParserMixin.getTokenFromCode (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:5333:13)
    at FlowParserMixin.nextToken (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:2449:10)
    at FlowParserMixin.next (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:2362:10)
    at FlowParserMixin.eat (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:2366:12)
    at FlowParserMixin.expect (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:3595:15)
    at FlowParserMixin.jsxParseClosingElementAt (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6734:10)
    at FlowParserMixin.jsxParseElementAt (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6749:37)
    at FlowParserMixin.jsxParseElementAt (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6752:32)
    at FlowParserMixin.jsxParseElement (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6803:17)
    at FlowParserMixin.parseExprAtom (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6813:19)
    at FlowParserMixin.parseExprSubscripts (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10619:23)
    at FlowParserMixin.parseUpdate (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10604:21)
    at FlowParserMixin.parseMaybeUnary (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10584:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10438:61)
    at FlowParserMixin.parseExprOps (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10443:23)
    at FlowParserMixin.parseMaybeConditional (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10420:23)
    at FlowParserMixin.parseMaybeAssign (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10383:21)
    at /app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:5634:39
    at FlowParserMixin.tryParse (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:3604:20)
    at FlowParserMixin.parseMaybeAssign (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:5634:18)
    at /app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10353:39
    at FlowParserMixin.allowInAnd (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:11955:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10353:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:11214:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:5727:18)
    at FlowParserMixin.parseExprAtom (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10867:23)
    at FlowParserMixin.parseExprAtom (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:6818:20)
    at FlowParserMixin.parseExprSubscripts (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10619:23)
    at FlowParserMixin.parseUpdate (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10604:21)
    at FlowParserMixin.parseMaybeUnary (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10584:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10438:61)
    at FlowParserMixin.parseExprOps (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10443:23)
    at FlowParserMixin.parseMaybeConditional (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10420:23)
    at FlowParserMixin.parseMaybeAssign (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10383:21)
    at FlowParserMixin.parseMaybeAssign (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:5685:18)
    at FlowParserMixin.parseExpressionBase (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10337:23)
    at /app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10333:39
    at FlowParserMixin.allowInAnd (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:11950:16)
    at FlowParserMixin.parseExpression (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:10333:17)
    at FlowParserMixin.parseReturnStatement (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:12640:28)
    at FlowParserMixin.parseStatementContent (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:12292:21)
    at FlowParserMixin.parseStatementLike (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:12261:17)
    at FlowParserMixin.parseStatementLike (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:5054:24)
    at FlowParserMixin.parseStatementListItem (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:12241:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:12814:61)
    at FlowParserMixin.parseBlockBody (/app/viet-portphotio/frontend/node_modules/@babel/parser/lib/index.js:12807:10)

ERROR in [eslint] 
src/App.js
  Line 145:10:  Parsing error: Unterminated JSX contents. (145:10)

webpack compiled with 2 errors
Compiling...
Compiled successfully!
webpack compiled successfully
